--- a/jdr.html
+++ b/jdr.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<p>Bonjour <strong><span id="heroName"></span></strong>.<br>Votre ennemi est <strong><span id="bossName"></span></strong>.</p>
-	<p>Points de vie de l'ennemi : <span id="bossLife">0</span></p>
-	<p>Votre force : <span id="heroStrenght">0</span></p>
+	<p>Votre ennemi possède <span id="bossStrenght">0</span> de force et <span id="bossLife">0</span> point(s) de vie.</p>
+	<p>Vous possédez <span id="heroStrenght">0</span> de force et <span id="heroLife">0</span> point(s) de vie.</p>
 	<p><button id="btnAtk">Attaquer</button></p>
 	<div id="console"></div>
 
@@ -17,22 +17,42 @@
 
 	<script>
 		$(function(){
+			$('#bossName').text(boss1.name);
+			$('#heroName').text(hero1.name);	
 			$('#bossLife').text(boss1.life);
-			$('#heroStrenght').replaceWith(hero1.strenght);
-			$('#bossName').replaceWith(boss1.name);
-			$('#heroName').replaceWith(hero1.name);
+			$('#bossStrenght').text(boss1.strenght);
+			$('#heroLife').text(hero1.life);
+			$('#heroStrenght').text(hero1.strenght);
+
 			$('#btnAtk').click(function(){
-				if (boss1.life>1) 
+				if (hero1.life > boss1.strenght) 
 				{
-					boss1.life = boss1.life - hero1.strenght;
-					$('#console').text("Vous attaquez " + boss1.name + " et lui infligez " + hero1.strenght + " point(s) de dégats.");
-					$('#console').append('<br>' + boss1.name + " possède maintenant " + boss1.life + " point(s) de vie.");
-					$('#bossLife').text(boss1.life);
+					if (boss1.life > hero1.strenght) 
+					{
+						boss1.life = boss1.life - hero1.strenght;
+						hero1.life = hero1.life - boss1.strenght;
+						$('#console').text("Vous attaquez " + boss1.name + " et lui infligez " + hero1.strenght + " point(s) de dégats.");
+						$('#console').append('<br>' + boss1.name + " vous attaque et vous inflige " + boss1.strenght + " point(s) de dégats !");
+						$('#bossLife').text(boss1.life);
+						$('#heroLife').text(hero1.life);
+					}
+					else
+					{
+						boss1.life = boss1.life - hero1.strenght;
+						hero1.life = hero1.life - boss1.strenght;
+						$('#bossLife').text(boss1.life);
+						$('#heroLife').text(hero1.life);
+						$('#console').text(boss1.name + " est mort. Vous avez gagné !");
+					}	
 				}
 				else
 				{
-					$('#console').text(boss1.name + " est mort. Vous avez gagné !");
-				}				
+					boss1.life = boss1.life - hero1.strenght;
+					hero1.life = hero1.life - boss1.strenght;
+					$('#bossLife').text(boss1.life);
+					$('#heroLife').text(hero1.life);
+					$('#console').text("Vous êtes mort !")
+				}							
 			});
 		});
 	</script>
