rajoute de la possibilité de se soigner avec la fonction heal et la fonction jquery pour le bouton

--- a/jdr.html
+++ b/jdr.html
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 		<div id="console"></div>
-		<p><button id="btnAtk">Attaquer</button></p>
+		<p><button id="btnAtk">Attaquer</button><button id="btnHeal">Se soigner</button></p>
 	</div>
 
 	<script src="jquery-3.3.1.js"></script>
